--- a/app/src/main/res/layout/todo_list_item.xml
+++ b/app/src/main/res/layout/todo_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -9,12 +9,14 @@
         android:id="@+id/task_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         tools:text="Sample Title"/>
 
     <TextView
         android:id="@+id/task_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/task_title"
         tools:text="Sample description "/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
